--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ CovSel = "f50c8ead-2a5d-5d7a-afef-a6d87c1f6489"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 ProximalBase = "e46f183a-ae2f-11e8-253c-bfe2254e1c56"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
