--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,6 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 [compat]
 CoordinateDescent = "0.3.0"
 CovSel = "0.1.0"
-Distributions = "0.23.9"
+Distributions = "^0.25.0"
 ProximalBase = "0.3.0"
 julia = "1.2"
