--- a/Project.toml
+++ b/Project.toml
@@ -8,14 +8,12 @@ CoordinateDescent = "c00ed354-b9be-54b8-8a23-c5ac771bc43a"
 CovSel = "f50c8ead-2a5d-5d7a-afef-a6d87c1f6489"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProximalBase = "0a755509-c5b1-5d6f-9b24-59bcda3c37a3"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
-CoordinateDescent = "0.3.0"
-CovSel = "0.1.0"
-Distributions = "^0.25.0"
-ProximalBase = "0.3.0"
-julia = "1.2"
+julia = "1.5"
